# openclaw-scanner

./: .gitignore  LICENSE  README.md  installation_tracker.py  nano_scanner.py  openclaw_cli_scanner.py  openclaw_usage.py  output_structures.py  pyproject.toml  scanner_utils.py  scrubber.py  structures.py  test_scrubber.py
.github/workflows/: lint.yml  release.yml
other/: list_active_skills.py
platform_compat/: __init__.py  base.py  common.py  darwin.py  linux.py
scripts/: mdm-macos.sh  mdm-windows-wsl.ps1
