[project]
name = "openclaw-scanner"
version = "0.1.0"
description = "OpenClaw/Moltbot installation detection and analysis tool"
authors = [
    { name = "Prompt Security", email = "support@prompt.security" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["certifi>=2023.0.0"]

[project.urls]
Homepage = "https://prompt.security"
Repository = "https://github.com/prompt-security/openclaw-scanner"

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = ["pylint>=3.0", "mypy>=1.0"]

[project.scripts]
openclaw-scanner = "openclaw_usage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "openclaw_usage.py",
    "structures.py",
    "platform_compat/*.py",
]

[tool.pylint.messages_control]
disable = [
    "line-too-long",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-nested-blocks",
    "too-many-return-statements",
    "broad-exception-caught",
    "no-else-return",
]
